--- a/OpenFlight/OpenFlight/Modules/FlightPlan/Edition/Components/SettingValuesChoiceTableViewCell.xib
+++ b/OpenFlight/OpenFlight/Modules/FlightPlan/Edition/Components/SettingValuesChoiceTableViewCell.xib
@@ -14,7 +14,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingValuesChoiceTableViewCell" rowHeight="128" id="KGk-i7-Jjw" customClass="SettingValuesChoiceTableViewCell" customModule="OpenFlight" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="398" height="139"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" translatesAutoresizingMaskIntoConstraints="NO" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw"  id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="398" height="139"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="center" axis="vertical" distribution="fillProportionally" alignment="center" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="gDc-HY-cLJ">
