--- a/OpenFlight/OpenFlight/Modules/FlightPlan/Edition/Components/Menu/SettingsMenuTableViewCell.xib
+++ b/OpenFlight/OpenFlight/Modules/FlightPlan/Edition/Components/Menu/SettingsMenuTableViewCell.xib
@@ -12,8 +12,8 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="92" id="KGk-i7-Jjw" customClass="SettingsMenuTableViewCell" customModule="OpenFlight" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" translatesAutoresizingMaskIntoConstraints="NO"
+            
+            <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw"
                 id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
